mklibs (0.1.27) UNRELEASED; urgency=low

  * Apply patches from Joseph S. Myers. (Closes: #469070)
    - mklibs-readelf: Uninitialized data fix
    - mklibs-readelf: Endian fix
    - mklibs: Add --sysroot, to locate all libraries and other related input
      files relative to a specified root directory rather than /.
    - mklibs: Add --gcc-options and --libdir options as well.
    - mklibs: Correct diagnostic text when symbol cannot be found.
    - mklibs: Ignore missing symbols from libthread_db, which are defined
      in the application that uses it.
  * Document --root in the man page.

 -- Joey Hess <joeyh@debian.org>  Tue, 25 Mar 2008 16:10:34 -0400

mklibs (0.1.26) unstable; urgency=low

  [ Joey Hess ]
  * Add XS-Vcs-Svn field.
  * Current standards-version (no changes needed).

  [ Bastian Blank ]
  * Fix linker name for non-default versions.

 -- Bastian Blank <waldi@debian.org>  Thu, 04 Oct 2007 11:35:55 +0200

mklibs (0.1.25) unstable; urgency=low

  * Support symbol versions. (closes: #433874)
  * Make it possible to force libraries.

 -- Bastian Blank <waldi@debian.org>  Mon, 01 Oct 2007 11:53:53 +0200

mklibs (0.1.24) unstable; urgency=low

  * Also check for symboles without type. (closes: #433388)

 -- Bastian Blank <waldi@debian.org>  Mon, 16 Jul 2007 21:01:07 +0000

mklibs (0.1.23) unstable; urgency=low

  * Fix ld name detection.

 -- Bastian Blank <waldi@debian.org>  Mon, 11 Jun 2007 07:56:06 +0000

mklibs (0.1.22) unstable; urgency=low

  * Fix missing includes. (closes: #417430)
  * Always include libgcc on old-abi arm.

 -- Bastian Blank <waldi@debian.org>  Wed,  6 Jun 2007 07:58:40 +0000

mklibs (0.1.21) unstable; urgency=low

  * Use mklibs-readelf in mklibs.

 -- Bastian Blank <waldi@debian.org>  Wed,  9 May 2007 20:54:28 +0000
 
mklibs (0.1.20) unstable; urgency=low

  * Fix readelf output regexp for compatibility with current readelf on
    alpha

 -- Steve Langasek <vorlon@debian.org>  Tue, 10 Jan 2006 10:25:12 -0800
